Various Solaris info

--- a/README
+++ b/README
@@ -5,15 +5,31 @@ MySQL for NSS systems
 
 Please read the file INSTALL for generic installation details.
 
-For the impatient:
-    On modern systems, you should just be able to
-        ./configure
-        (Linux)    make
-        (Solaris)  sh -c "LD_OPTIONS='-z nodelete' make" 
-        make install
+NOTE: Solaris 9 is currently unsupported.  Sun changed something in the
+      API that's preventing the library from properly functioning.
 
-    On Solaris, MAKE SURE you're using the above line in order to
-    avoid memory leaks!
+For the impatient:
+    Linux:
+        ./configure
+	make
+	make install
+    Solaris (gcc):
+        sh -c "CFLAGS='-m32' ./configure"
+        sh -c "LD_OPTIONS='-z nodelete' make" 
+        make install
+    Solaris (cc):
+        Unsupported at this time
+
+    It's very important to follow the Solaris lines above.  In some future
+    version you won't have to do the above.  Here's why you need each line
+    CFLAGS=-m32 - Compile a 32-bit library.  NOTE: your MySQL installation
+                  must also be 32-bit.  If you build from source using a gcc
+                  that builds 64-bit targets, rebuild and reinstall MySQL
+                  using CFLAGS=-m32 and CXXFLAGS=-m32 or you won't be able
+                  to create a working libnss-mysql library.
+    LD_OPTIONS='-z nodelete' - There are bugs in various Solaris routines
+                  which will cause memory leaks unless we tell the linker
+                  to disallow the system from dlclose()'ing libnss-mysql.
 
     You need to use GNU make.  Solaris' make will choke.  You may need
     to add the full path to your GNU make in the example above.
@@ -66,9 +82,11 @@ Debugging:
     installation.
 
 Solaris support:
-    This is working on my Solaris8/x86 box.  It compiles on a Solaris8/sparc
-    box but I do not have the root privs needed to test it.  If someone's got
-    a place I can test this on, I'd be very appreciative.
+    libnss-mysql appears to work fine under the Solaris' I've tested (see
+    below).  There are a few things you need to pay special attention to
+    when compiling (above).  I plan to fully support Solaris as the
+    library matures.  As it stands now, it should work for most people.
+    If it doesn't, *please* let me know so I can make sure to investigate.
 
 Tested with:
     Corel (1.2 - Debian 2.1) and MySQL 3.21.33b
@@ -78,5 +96,6 @@ Tested with:
     RedHat 7.3 and MySQL 3.23.49a
 
     Solaris 8/x86, MySQL 3.23.52, gcc 3.1
+    Solaris 8/sparc, MySQL 3.23.52, gcc (64bit) 3.0.2
 
 
