--- a/TODO
+++ b/TODO
@@ -5,3 +5,11 @@ Better/more generic parser?
 Support other NSS calls (like group_bymember)
 Solaris 9 support
 Check current error returns/conditions; properly use errno, herrno etc
+
+BUGFIXES
+    csh ~username is very unhappy on solaris - why?
+    Turn off socket keepalive?
+    full fork/pid-change handling
+    sigpipe handling
+    If # servers mismatch between root/non-root config, be graceful;
+        extend to bad/missing config data
